added completed week 10 files and attachments

--- a/character.html
+++ b/character.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Character Creator</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -47,31 +47,56 @@
           </div>
           
           </nav>
-
-  <br>
-
-
-<ul class="image-list">
-  <li>
-    <a href="#" style="background-image: url('DnD_Hobgoblin.png');"></a>
-    <div class="details">
-      <p class="image-author">Hobgoblin</p>
-    </div>
-  </li>
-  <li>
-    <a href="#" style="background-image: url('DnD_gnome.png');"></a>
-    <div class="details">
-      <p class="image-author">Gnome</p>
-    </div>
-  </li>
-  <li>
-    <a href="#" style="background-image: url('DnD_Djinn.png');"></a>
-    <div class="details">
-      <p class="image-author">Djinn</p>
-    </div>
-  </li>
-
-</ul>
+      <br>
+      <div class="table-responsive container">
+        <table class="table table-dark table-bordered table align-middle">
+            <tr>
+                <th class="table-active">Race</th>
+                <th class="table-active">Class</th>
+                <th class="table-active">Alignment</th>
+            </tr>
+            <tr>
+                <td class="td">Human</td>
+                <td>Paladin</td>
+                <td>Lawful Good</td>
+            </tr>
+            <tr>
+                <td>Gnome</td>
+                <td>Bard</td>
+                <td>Lawful Neutral</td>
+            </tr>
+            <tr>
+                <td>Elf</td>
+                <td>Druid</td>
+                <td>Lawful Evil</td>
+            </tr>
+            <tr>
+                <td>Dragonborn</td>
+                <td>Sorcerer</td>
+                <td>Neutral Good</td>
+            </tr>
+            <tr>
+                <td>Goblin</td>
+                <td>Fighter</td>
+                <td>Neutral Evil</td>
+            </tr>
+            <tr>
+                <td>Orc</td>
+                <td>Barbarian</td>
+                <td>Chaotic Good</td>
+            </tr>
+            <tr>
+                <td>Halfling</td>
+                <td>Cleric</td>
+                <td>Chaotic Neutral</td>
+            </tr>
+            <tr>
+                <td>Tiefling</td>
+                <td>Warlock</td>
+                <td>Chaotic Evil</td>
+            </tr>
+        </table>
+      </div>
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="node_modules/jquery/dist/jquery.js"></script>
